--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,23 @@ processResources {
     }
 }
 
+repositories {
+    flatDir {
+        dir 'lib'
+    }
+}
+
+dependencies {
+    compile group: "noppes.npcs", name:"CustomNPCs_1.12.2", version: "(05Jul20)-deobf"
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+}
+
+test {
+    useJUnitPlatform()
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = "utf8"
 }
