--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 
+mod_version = 1.3.0
+
 kotlin_version = 1.4.20
-kotlin_plugin_version = 1.3.50
+kotlin_plugin_version = 1.3.72
 annotations_version = 16.0.3
 coroutines_version = 1.4.2
