--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,33 +1,53 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 plugins {
     id 'java'
+    id 'io.izzel.taboolib' version '1.3'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
 group = 'moe.gensoukyo'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
+taboolib {
+    tabooLibVersion = '5.54'
+    loaderVersion = '2.11'
+    classifier = null
+    builtin = true
+}
+
 repositories {
     mavenCentral()
-    maven {
-        name = 'spigotmc-repo'
-        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
-    }
-    maven {
-        name = 'sonatype'
-        url = 'https://oss.sonatype.org/content/groups/public/'
-    }
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
+    implementation 'ink.ptms.core:v11600:11600:all'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
 }
 
 processResources {
     from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [version: version]
+        include 'plugin.yml'
+        expand(
+                name: rootProject.name,
+                main: project.group + ".boot.PluginBoot",
+                version: project.version,
+                libVersion: taboolib.tabooLibVersion,
+                loaderVersion: taboolib.loaderVersion
+        )
+    }
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
