--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,8 +1,18 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_plugin_version"
+    }
+}
+
 plugins {
     id 'java'
     id 'io.izzel.taboolib' version '1.3'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
 }
+
+apply plugin: "kotlin"
 
 group = 'moe.gensoukyo'
 version = '1.0.0'
@@ -23,10 +33,13 @@ repositories {
 
 dependencies {
     implementation 'ink.ptms.core:v11600:11600:all'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation fileTree(dir: 'libs', includes: ['*.jar'])
 
-    implementation project(":mcglib")
+    implementation rootProject
 }
 
 processResources {
