--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jdk7", version: kotlin_version
     implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jdk8", version: kotlin_version
     implementation group: "org.jetbrains.kotlin", name: "kotlin-reflect", version: kotlin_version
+    compile group: "org.jetbrains.kotlinx", name: "kotlinx-coroutines-core", version: coroutines_version
+    compile group: "org.jetbrains.kotlinx", name: "kotlinx-coroutines-jdk8", version: coroutines_version
     testImplementation "org.jetbrains.kotlin:kotlin-script-runtime:1.3.40"
 }
 
