--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 
-mod_version = 1.8.0
+mod_version = 1.11.0
 
 kotlin_version = 1.4.20
 kotlin_plugin_version = 1.3.72
