--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version = 1.11.0
+modVersion = 1.11.0
+modid=mcglib
+modFileName=MCGLib
+
+mixinVersion=0.8.4
 
 kotlin_version = 1.4.20
 kotlin_plugin_version = 1.3.72
