--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.+'
+    id 'com.github.johnrengelman.shadow' version '7.0.+'
     id 'java'
 }
 
@@ -91,7 +91,8 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
 
-    implementation fileTree(dir: 'lib', includes: ['*.jar'])
+    implementation 'noppes.npcs:CustomNPCs_1.12.2:(05Jul20)-deobf'
+    implementation '_:AttributePlus:2.2.9'
 
     // Mixin
     implementation("org.spongepowered:mixin:${mixinVersion}") {
@@ -173,8 +174,7 @@ artifacts {
     archives shadowJar
 }
 
-
-jar.finalizedBy('reobfJar')
+shadowJar.finalizedBy('reobfJar')
 
 publishing {
     publications {
