--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,11 @@ archivesBaseName = modFileName
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
-compileKotlin {
-    // 修复 Kotlin 使用 MethodHandle 不响应多态签名的 bug
-    kotlinOptions.freeCompilerArgs = ["-Xpolymorphic-signature"]
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xpolymorphic-signature", "-Xjvm-default=enable"]
+    }
 }
 
 minecraft {
@@ -79,10 +81,10 @@ mixin {
 
 repositories {
     flatDir { dir 'lib' }
+    mavenCentral()
     maven { url = "https://repo.spongepowered.org/maven" }
     maven { url = "https://maven.shadowfacts.net/" }
     maven { url = "https://hub.spigotmc.org/nexus/content/repositories/public/" }
-    mavenCentral()
 }
 
 dependencies {
