--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,7 @@ dependencies {
     compileOnly group: "net.shadowfacts", name: "Forgelin", version: "1.8.3"
     // 插件
     compile "org.bukkit:bukkit:1.12.2-R0.1-SNAPSHOT"
+    compileOnly 'org.spongepowered:spongeapi:7.3.0'
     // compile "org.serverct.ersha.jd:AttributePlus:2.2.9.2"
 
     // JUnit
