--- a/build.gradle
+++ b/build.gradle
@@ -175,7 +175,8 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 "FMLCorePlugin": "moe.gensoukyo.lib.internal.core.MixinBootstrapPlugin",
                 "TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
-                "FMLCorePluginContainsFMLMod": true
+                "FMLCorePluginContainsFMLMod": true,
+                "ForceLoadAsMod": true
         ])
     }
 }
