revert some changes which may cause conflicts

--- a/build.gradle
+++ b/build.gradle
@@ -209,7 +209,7 @@ reobf {
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        mcglib(MavenPublication) {
             artifact jar
         }
     }
